--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.5",
     "googleapis": "^39.2.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "whatsapp-chapi": "^1.1.1"
   },
