--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate for React apps",
   "main": "index.js",
   "scripts": {
-    "start": "cd www; webpack-dev-server --mode development --hot",
+    "start": "cd www; webpack-dev-server --host 0.0.0.0 --mode development --hot",
     "server": "nodemon server/app.js",
     "build": "webpack --mode production"
   },
@@ -12,17 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
-    "classnames": "^2.2.6",
-    "react": "^16.2.0",
-    "react-awesome-slider": "^1.0.1",
-    "react-chat-window": "^1.2.1",
-    "react-dom": "^16.2.0",
     "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
+    "react": "^16.2.0",
+    "react-awesome-slider": "^1.0.1",
+    "react-chat-window": "^1.2.1",
+    "react-dom": "^16.2.0",
+    "react-share": "^3.0.1",
+    "rimraf": "^3.0.0",
     "whatsapp-chapi": "^1.1.1"
   },
   "devDependencies": {
